# isync-daemon

./: .gitignore  .pre-commit-config.yaml  COPYING  README.md  TODOs.md  colors.py  config.py  isync_wrapper.py  journal_logger.py  mailsync-daemon.py  mailsync_argument_parser.py  mailsync_daemon.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_poetry_pylint.sh
